--- a/h5player.html
+++ b/h5player.html
@@ -52,24 +52,24 @@
 						<div class="barrage-set-column">
 							<p class="barrage-set-info">透明度</p>
 							<div class="barrage-opacity">
-								<p class="barrage-opacity-choice"  data-value="3">高</p>
-								<p class="barrage-opacity-choice"  data-value="2">中</p>
-								<p class="barrage-opacity-choice"  data-value="1">低</p>
-								<p class="barrage-opacity-choice active" data-value="0">无</p>
+								<p class="barrage-opacity-choice barrage-opacity-choice3"  data-value="3">高</p>
+								<p class="barrage-opacity-choice barrage-opacity-choice2"  data-value="2">中</p>
+								<p class="barrage-opacity-choice barrage-opacity-choice1"  data-value="1">低</p>
+								<p class="barrage-opacity-choice barrage-opacity-choice0 active" data-value="0">无</p>
 							</div>
 						</div>
 						<div class="barrage-set-column barrage-set-column-position">
 							<p class="barrage-set-info">弹幕位置</p>
 							<div class="barrage-position">
-								<div class="barrage-position-choice">
+								<div class="barrage-position-choice barrage-position-choice2" data-value="2">
 									<i class="barrage-position-img barrage-position-bottomscreen"></i>
 									<p class="barrage-position-text">底端</p>
 								</div>
-								<div class="barrage-position-choice">
+								<div class="barrage-position-choice barrage-position-choice1" data-value="1">
 									<i class="barrage-position-img barrage-position-topscreen"></i>
 									<p class="barrage-position-text">顶端</p>
 								</div>
-								<div class="barrage-position-choice active">
+								<div class="barrage-position-choice barrage-position-choice0 active" data-value="0">
 									<i class="barrage-position-img barrage-position-fullscreen"></i>
 									<p class="barrage-position-text">全屏</p>
 								</div>
@@ -110,7 +110,7 @@
 	<script type="text/javascript" src="./js/h5player.js"></script>
 	<script type="text/javascript">
 		var h5player = new h5player({
-			roomId:20185,
+			roomId:4536540,
 			host:'',
 			videoId:'video'
 		});
