--- a/h5player.html
+++ b/h5player.html
@@ -130,7 +130,7 @@
 		//31306403 1308281
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:51266105,
+			roomId:39849,
 			host:'',
 			videoId:'video',
 			userUid:1001
