--- a/h5player.html
+++ b/h5player.html
@@ -130,7 +130,7 @@
 		//31306403 1308281 6515593
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:6515593,
+			roomId:1024,
 			host:'',
 			videoId:'video',
 			userUid:1001
