--- a/h5player.html
+++ b/h5player.html
@@ -120,6 +120,7 @@
 	<script type="text/javascript" src="https://cdn.kascend.com/jellyfish/sysv730/js/lib/jquery/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="./js/flv.min.js"></script>
 	<script type="text/javascript" src="./js/h5playerStreamManager.js"></script>
+	<script type="text/javascript" src="./js/h5playerBarrageQueue.js"></script>
 	<script type="text/javascript" src="./js/h5playerBarrageTunnelManager.js"></script>
 	<script type="text/javascript" src="./js/h5playerBarrageBulletManager.js"></script>
 	<script type="text/javascript" src="./js/h5playerBarrage.js"></script>
@@ -127,10 +128,10 @@
 	<script type="text/javascript" src="./js/h5playerControlBar.js"></script>
 	<script type="text/javascript" src="./js/h5player.js"></script>
 	<script type="text/javascript">
-		//31306403 1308281 6515593
+		// 31306403 1308281 6515593
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:1024,
+			roomId:4536540,
 			host:'',
 			videoId:'video',
 			userUid:1001
