--- a/h5player.html
+++ b/h5player.html
@@ -89,6 +89,9 @@
 		</div>
 	</div>
 	<style>
+	body{
+		width: 1181px;height: 664px;
+	}
 		.test-btn{
 			width: 80px;
 			height: 40px;
@@ -131,7 +134,7 @@
 		// 31306403 1308281 6515593
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:39849,
+			roomId:18920,
 			host:'',
 			videoId:'video',
 			userUid:1001
@@ -149,6 +152,7 @@
 		$('.play-btn').click(function(){
 			h5player2.switchBack();
 		})
+
 	</script>
 </body>
 </html>
