--- a/h5player.html
+++ b/h5player.html
@@ -119,7 +119,7 @@
 	</style>
 	<input type="text" placeholder="输入房间号" class="test-input">
 	<div class="test-btn start-btn">开始</div>
-	<div class="test-btn play-btn">切回h5</div>
+	<!-- <div class="test-btn play-btn">切回h5</div> -->
 	<script type="text/javascript" src="https://cdn.kascend.com/jellyfish/sysv730/js/lib/jquery/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="./js/flv.min.js"></script>
 	<script type="text/javascript" src="./js/h5playerStreamManager.js"></script>
@@ -131,15 +131,15 @@
 	<script type="text/javascript" src="./js/h5playerControlBar.js"></script>
 	<script type="text/javascript" src="./js/h5player.js"></script>
 	<script type="text/javascript">
-		// 31306403 1308281 6515593
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:58323143,
+			roomId:4590772,
 			host:'',
 			videoId:'video',
 			userUid:1001
 		});
 		$('.start-btn').click(function(){
+			h5player2 = null;
 				var roomId = $('.test-input').val();
 				h5player2 = new h5player({
 					roomId:roomId,
