--- a/h5player.html
+++ b/h5player.html
@@ -12,7 +12,7 @@
 		</div>
 		<div class="live-h5player-barrage">
 		</div>
-		<div class="live-h5player-controlbar">
+		<div class="live-h5player-controlbar" style="display: block;">
 				<div class="controlbar-left h5player-pauseplay" data-status='1'>
 					<p class="controlbar-tip">暂停</p>
 				</div>
@@ -89,9 +89,7 @@
 		</div>
 	</div>
 	<style>
-	body{
-		width: 1181px;height: 664px;
-	}
+	
 		.test-btn{
 			width: 80px;
 			height: 40px;
@@ -133,7 +131,7 @@
 	<script type="text/javascript">
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:4590772,
+			roomId:1029060,
 			host:'',
 			videoId:'video',
 			userUid:1001
