--- a/h5player.html
+++ b/h5player.html
@@ -12,7 +12,7 @@
 		</div>
 		<div class="live-h5player-barrage">
 		</div>
-		<div class="live-h5player-controlbar" style="display: block;">
+		<div class="live-h5player-controlbar controlbar-bottom">
 				<div class="controlbar-left h5player-pauseplay" data-status='1'>
 					<p class="controlbar-tip">暂停</p>
 				</div>
@@ -131,7 +131,7 @@
 	<script type="text/javascript">
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:1029060,
+			roomId:39849,
 			host:'',
 			videoId:'video',
 			userUid:1001
