--- a/h5player.html
+++ b/h5player.html
@@ -131,7 +131,7 @@
 	<script type="text/javascript">
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:39849,
+			roomId:1201116,
 			host:'',
 			videoId:'video',
 			userUid:1001
