--- a/h5player.html
+++ b/h5player.html
@@ -119,6 +119,8 @@
 	<div class="test-btn start-btn">开始</div>
 	<!-- <div class="test-btn play-btn">切回h5</div> -->
 	<script type="text/javascript" src="https://cdn.kascend.com/jellyfish/sysv730/js/lib/jquery/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="./js/util/config.js"></script>
+	<script type="text/javascript" src="./js/util/chushou_emoji.js"></script>
 	<script type="text/javascript" src="./js/flv.min.js"></script>
 	<script type="text/javascript" src="./js/h5playerStreamManager.js"></script>
 	<script type="text/javascript" src="./js/h5playerBarrageQueue.js"></script>
@@ -131,7 +133,7 @@
 	<script type="text/javascript">
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:10975021,
+			roomId:20185,
 			host:'',
 			videoId:'video',
 			userUid:1001
