--- a/h5player.html
+++ b/h5player.html
@@ -12,6 +12,11 @@
 		</div>
 		<div class="live-h5player-barrage">
 		</div>
+		<div class="live-h5player-system">
+			<div class="giftcombo-animation">
+				
+			</div>
+		</div>
 		<div class="live-h5player-controlbar controlbar-bottom">
 				<div class="controlbar-left h5player-pauseplay" data-status='1'>
 					<p class="controlbar-tip">暂停</p>
@@ -123,6 +128,7 @@
 	<script type="text/javascript" src="./js/util/chushou_emoji.js"></script>
 	<script type="text/javascript" src="./js/flv.min.js"></script>
 	<script type="text/javascript" src="./js/h5playerStreamManager.js"></script>
+	<script type="text/javascript" src="./js/h5playerGiftcomboAnimation.js"></script>
 	<script type="text/javascript" src="./js/h5playerBarrageQueue.js"></script>
 	<script type="text/javascript" src="./js/h5playerBarrageTunnelManager.js"></script>
 	<script type="text/javascript" src="./js/h5playerBarrageBulletManager.js"></script>
@@ -133,7 +139,7 @@
 	<script type="text/javascript">
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:20185,
+			roomId:4536540,
 			host:'',
 			videoId:'video',
 			userUid:1001
