--- a/h5player.html
+++ b/h5player.html
@@ -13,9 +13,18 @@
 		<div class="live-h5player-barrage">
 		</div>
 		<div class="live-h5player-system">
-			<div class="giftcombo-animation">
-				
+			<div class="system-wrap">
+				<div class="giftcombo-animation">
+					<div class="left-bar"></div>
+					<div class="middle-bar">
+						<img src="./imgs/h5player/combo/0/gift.gif" alt="" class="giftcombo-img">
+						<p class="giftcombo-text"><span>用户昵称</span> 送给主播 <span>1314个海马</span></p>
+					</div>
+					<div class="right-bar"></div>
+					<div class="clear"></div>
+				</div>
 			</div>
+			
 		</div>
 		<div class="live-h5player-controlbar controlbar-bottom">
 				<div class="controlbar-left h5player-pauseplay" data-status='1'>
@@ -139,7 +148,7 @@
 	<script type="text/javascript">
 		var h5player2 = null;
 		h5player2 = new h5player({
-			roomId:4536540,
+			roomId:20185,
 			host:'',
 			videoId:'video',
 			userUid:1001
