--- a/h5player.html
+++ b/h5player.html
@@ -15,7 +15,7 @@
         		<img src="./imgs/h5player/loading.png" alt="" class="live-loading-icon">
                 <p class="live-loading-text">缓冲中</p>
             </div>
-            <p class="live-time"><span class="red-ball"></span>&nbsp;<span>已开播时间：3小时22分钟</span></p>
+            <p class="live-time live-time-hidden"><span class="red-ball"></span>&nbsp;<span class="live-time-now">已开播时间：3小时22分钟</span></p>
         </div>
         <div class="live-h5player-video-box">
             <video class="live-h5player-video" id='video'></video>
@@ -165,7 +165,7 @@
     <script type="text/javascript">
     var h5player2 = null;
     h5player2 = new h5player({
-        roomId: 55001,
+        roomId: 22596207,
         host: '',
         videoId: 'video',
         userUid: 1001
