--- a/h5player.html
+++ b/h5player.html
@@ -34,6 +34,7 @@
         	</div>
             <!-- 连击动画飘屏 -->
             <div class="giftcombo-animation" id="giftcombo-animation">
+                <canvas width="0" height="0" id="giftcombo-canvas"></canvas>
                 <div class="left-bar"></div>
                 <div class="middle-bar">
                     <img src="./imgs/h5player/combo/0/gift.gif" alt="" class="giftcombo-img">
@@ -165,7 +166,7 @@
     <script type="text/javascript">
     var h5player2 = null;
     h5player2 = new h5player({
-        roomId: 22596207,
+        roomId: 55001,
         host: '',
         videoId: 'video',
         userUid: 1001
