--- a/h5player.html
+++ b/h5player.html
@@ -15,7 +15,14 @@
         		<img src="./imgs/h5player/loading.png" alt="" class="live-loading-icon">
                 <p class="live-loading-text">缓冲中</p>
             </div>
-            <p class="live-time live-time-hidden"><span class="red-ball"></span>&nbsp;<span class="live-time-now">已开播时间：3小时22分钟</span></p>
+            <p class="live-time live-time-hidden"><span class="red-ball"></span>&nbsp;<span class="live-time-now">已开播：3小时22分钟</span></p>
+            <div class="h5player-unsupport-autoplay">
+                <div class="unsupport-autoplay-box">
+                    <img src="./imgs/h5player/slogan.png" alt="" class="unsupport-autoplay-icon"> 
+                    <p class="unsupport-autoplay-tip">您的浏览器暂不支持视频自动播放</p>
+                    <div class="unsupport-autoplay-btn">点击播放</div>
+                </div>
+            </div>
         </div>
         <div class="live-h5player-video-box">
             <video class="live-h5player-video" id='video'></video>
@@ -168,7 +175,7 @@
     <script type="text/javascript">
     var h5player2 = null;
     h5player2 = new h5player({
-        roomId: 55001,
+        roomId: 13763,
         host: '',
         videoId: 'video',
         userUid: 1001
